# MaruAudio_V3

./: .cursorrules  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PROJECT-STATE.md  README.md  index.html  llms.txt  package-lock.json  package.json  skills-lock.json  vite.config.ts  启动Codex.cmd  启动Codex.ps1
.claude/: settings.json  settings.local.json
.serena/: project.yml
IndexTTS/: README.md
backend/: README.md  requirements.txt  run_server.py
docs/: IndexTTS15集成开发方案.md  IndexTTS引擎学习总结.md  IndexTTS引擎深度学习报告.md  MaruAudio_V3项目开发方案.md  UI设计图生成prompt归档.md  UI设计审查报告-2026-05-29.md  code-review-report.md  code-scan-report-2026-05-28.json  付费方案.md  仙宫云GPU云端接口对接方案.md  前端深度审查报告-2026-05-27.md  前端设计审查报告-2026-05-19.md  深度审查报告-2026-05-19.md  深度审查报告-2026-05-26.md  逗哥配音功能对标分析.md  配音页面UI功能设计方案.md  项目结构说明.md
frontend/: dubbing-copy.test.ts  open-external-url.test.ts  open-external-url.ts  package-lock.json  package.json  plugin-opener.override.ts  settings-core.test.ts  vite.config.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: lib.rs  main.rs
frontend/src-tauri/src/commands/: app.rs  audio.rs  engine.rs  export.rs  file.rs  llm.rs  mod.rs  sample.rs  subtitle.rs  tts.rs  user.rs
frontend/src-tauri/src/services/: mod.rs
frontend/src-tauri/src/services/subtitle/: mod.rs
frontend/src-tauri/src/services/tts/: mod.rs
frontend/src-tauri/src/utils/: api.rs  config.rs  crypto.rs  error.rs  mod.rs  session.rs  storage.rs
memory/: session_context.md
public/: index.html
server/: README.md
src/: App.vue  app.css  app.d.ts  fonts.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app.rs  audio.rs  engine.rs  file.rs  mod.rs  sample.rs  tts.rs  user.rs
src-tauri/src/services/: audio.rs  mod.rs  subtitle.rs
src-tauri/src/services/tts/: cloud.rs  emotion.rs  lightweight.rs  mod.rs
src-tauri/src/utils/: api.rs  config.rs  logger.rs  mod.rs  path.rs  storage.rs
项目开发文档/: 项目结构说明.md  (+2 more)
(+539 files in other folders)
